# rust-test-api

./: .env  Cargo.toml  README.md  README.md 
src/: api.rs  json.rs  lib.rs  logger.rs  main.rs  routes.rs
tests/: api_test.rs
